--- a/vite/index.html
+++ b/vite/index.html
@@ -4,13 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3. Как создать компонент на Vue.js для переиспользования на классическом сайте на примере Switcher (Урок №3)   </title>
+  <title>4. Создание компонента слайдера выбора диапазона чисел</title>
 
-  <link rel="stylesheet" href="assets/css/calculator.scss">
-  <link rel="stylesheet" href="assets/css/index.scss">
+  <link rel="stylesheet" href="/css/index.scss">
 
-  <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
-  <!-- <script src="assets/js/libs/vue.3.3.4.global.prod.js"></script> -->
 </head>
 
 <body>
@@ -20,13 +17,19 @@
   <div class="container">
     <main class="main">
 
-      <h1>3. Как создать компонент на Vue.js для переиспользования на классическом сайте на примере Switcher (Урок №3)</h1>
+      <h1>4. Создание компонента слайдера выбора диапазона чисел</h1>
 
 
       
-      <div id="calculator" class="calculator">
+      <div id="calculator" class="main__calculator calculator">
 
-        <switcher-box></switcher-box>
+        <switcher-box class="calculator__item">
+          Свитчер
+        </switcher-box>
+
+        <slider-range class="calculator__item"  first="2000" last="5000" two max="15000">
+          Слайдер
+        </slider-range>
 
       </div>
 
@@ -37,7 +40,7 @@
   
   
   
-  <script type="module" src="assets/js/calculator.js"></script>
+  <script type="module" src="/calculator.js"></script>
 </body>
 
 </html>
