--- a/vite/index.html
+++ b/vite/index.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>4. Создание компонента слайдера выбора диапазона чисел</title>
+  <title>4. Компонент слайдера выбора диапазона чисел Slider Range на базе стандартного html элемента input type range в Vue.js</title>
 
   <link rel="stylesheet" href="/css/index.scss">
-
 </head>
 
 <body>
@@ -17,7 +16,7 @@
   <div class="container">
     <main class="main">
 
-      <h1>4. Создание компонента слайдера выбора диапазона чисел</h1>
+      <h1>4. Компонент слайдера выбора диапазона чисел Slider Range на базе стандартного html элемента input type range в Vue.js</h1>
 
 
       
