--- a/vite/index.html
+++ b/vite/index.html
@@ -26,7 +26,7 @@
           Свитчер
         </switcher-box>
 
-        <slider-range class="calculator__item"  first="2000" last="5000" two max="15000">
+        <slider-range class="calculator__item" :first="2000" :last="5000" two :max="15000">
           Слайдер
         </slider-range>
 
