--- a/vite/index.html
+++ b/vite/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>4. Компонент слайдера выбора диапазона чисел Slider Range на базе стандартного html элемента input type range в Vue.js</title>
+  <title>Компоненты на Vue.js для создания калькулятора для классического сайта</title>
 
   <link rel="stylesheet" href="/css/index.scss">
 </head>
@@ -16,7 +16,7 @@
   <div class="container">
     <main class="main">
 
-      <h1>4. Компонент слайдера выбора диапазона чисел Slider Range на базе стандартного html элемента input type range в Vue.js</h1>
+      <h1>Компоненты на Vue.js для создания калькулятора для классического сайта</h1>
 
 
       
